--- a/package.json
+++ b/package.json
@@ -1,60 +1,37 @@
 {
-  "name": "cofsbot",
-  "version": "0.0.2",
-  "description": "No comment",
+  "name": "AR15BOT",
+  "version": "1.0.0",
+  "description": "Termux only",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "keywords": [
-    "termux",
-    "whatsapp",
-    "bot",
-    "whatsapp",
-    "bot"
-  ],
-  "author": "Gabrielcofs",
-  "license": "ISC",
   "dependencies": {
-    "@adiwajshing/baileys": "^3.3.0",
-    "@kagchi/kag-api": "^1.5.5",
-    "async": "^2.4.1",
+      "@adiwajshing/baileys": "^3.3.0",
     "axios": "^0.21.0",
-    "cfonts": "^2.9.0",
-    "escape-string-regexp": "^1.0.5",
-    "fake-useragent": "^1.0.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "fs-extra": "^9.0.1",
-    "brainly-scraper": "^1.0.3",
-    "mathjs": "^8.1.1",
-    "emoji-unicode": "^2.0.1",
-    "google-it": "^1.6.0",
-    "got": "^11.8.1",
-    "imgbb-uploader": "^1.2.0",
+    "dotenv": "^8.2.0",
     "image-to-base64": "^2.1.1",
+        "node-gtts": "^2.0.2",
     "moment-timezone": "^0.5.32",
-    "multistream": "^2.1.0",
     "needle": "^2.5.2",
-    "node-fetch": "^2.6.1",
     "node-tesseract-ocr": "^2.0.0",
-    "performance-now": "^2.1.0",
-    "lolis.life": "^4.0.0",
-    "remove.bg": "^1.3.0",
-    "request": "^2.81.0",
-    "spinnies": "^0.5.1",
-    "tiktok-scraper": "^1.4.7"
+    "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {},
+  "scripts": {
+    "test": "node index"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gabrielcoofs/Cofs.git"
+    "url": "git+https://github.com/A187ID/AR15BOT.git"
   },
+  "keywords": [
+    "k"
+  ],
+  "author": "Abdul Muttaqin",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gabrielcoofs/Cofs"
+    "url": "https://github.com/A187ID/AR15BOT/issues"
   },
-  "homepage": "https://github.com/gabrielcoofsNetuh/cofsbot#readme"
+  "homepage": "https://github.com/A187ID/AR15BOT/readme"
 }
