--- a/package.json
+++ b/package.json
@@ -1,37 +1,49 @@
 {
-  "name": "AR15BOT",
-  "version": "1.0.0",
-  "description": "Termux only",
+  "name": "Gabrielbot",
+  "version": "0.0.2",
+  "description": "Only termux",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
-  "dependencies": {
-      "@adiwajshing/baileys": "^3.3.0",
-    "axios": "^0.21.0",
-    "dotenv": "^8.2.0",
-    "image-to-base64": "^2.1.1",
-        "node-gtts": "^2.0.2",
-    "moment-timezone": "^0.5.32",
-    "needle": "^2.5.2",
-    "node-tesseract-ocr": "^2.0.0",
-    "qrcode-terminal": "^0.12.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "node index"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/A187ID/AR15BOT.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
-    "k"
+    "termux",
+    "whatsapp",
+    "bot",
+    "whatsapp",
+    "bot"
   ],
-  "author": "Abdul Muttaqin",
+  "author": "Cofs",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/A187ID/AR15BOT/issues"
+  "dependencies": {
+    "@adiwajshing/baileys": "github:adiwajshing/baileys",
+    "@kagchi/kag-api": "^1.5.5",
+    "async": "^3.2.0",
+    "axios": "^0.21.1",
+    "cfonts": "^2.9.0",
+    "escape-string-regexp": "^4.0.0",
+    "fake-useragent": "^1.0.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "lolis.life": "^4.0.0",
+    "moment-timezone": "^0.5.32",
+    "multistream": "^4.0.1",
+    "node-fetch": "^2.6.1",
+    "remove.bg": "^1.3.0",
+    "request": "^2.81.0",
+    "spinnies": "^0.5.1",
+    "tiktok-scraper": "^1.4.7"
   },
-  "homepage": "https://github.com/A187ID/AR15BOT/readme"
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ToinNetuh/ToiniuBot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ToinNetuh/ToiniuBot.git"
+  },
+  "homepage": "https://github.com/ToinNetuh/ToiniuBot#readme"
 }
